Fix searchline spacing

--- a/frontend/src/components/SearchLine/SearchLine.css
+++ b/frontend/src/components/SearchLine/SearchLine.css
@@ -92,7 +92,7 @@
 }
 
 #where-input-searchline {
-  width: 300px;
+  width: 260px;
 }
 
 .suggestions-container {
